Bug 153332 - Background in cell style preview in "Conditional formatting for" dialog is the same when you change the cell style to another
Summary: Background in cell style preview in "Conditional formatting for" dialog is th...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Conditional-Formatting-Editing
  Show dependency treegraph
 
Reported: 2023-02-02 19:37 UTC by Roman Kuznetsov
Modified: 2023-02-14 09:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2023-02-02 19:37:00 UTC
Description:
Background in cell style preview in "Conditional formatting for" dialog is the same when you change the cell style to another

Steps to Reproduce:
1. Open Calc
2. Open "Conditional formatting for" dialog using Conditional widget -> Condition on toolbar
3. Select "Error" cell style in Apple style row -> look at the style preview to right, you see the red background -> it's OK
4. Select "Default" cell style -> look at the style preview to right, you see the same red background -> it isn't OK, because the Default style has no background color at all

The same will be if you select Neutral style and then select Default style, but it will be yellow background color there

Actual Results:
We see a wrong background color in some cases when change cell style

Expected Results:
We see a correct background color in some cases when change cell style


Reproducible: Always


User Profile Reset: No

Additional Info:
repro in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d8e6b488ceaff7c88856ebcfcfec14d2d8cd7652
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

but no repro in

Version: 7.5.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 3aca23eec42e9d6fbe57071d7633ae1fc4bc5fcc
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

regression
Comment 1 Roman Kuznetsov 2023-02-02 19:42:31 UTC
No repro in

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded
Comment 2 Ezinne 2023-02-13 10:28:38 UTC
Reproducible in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4a0d671706306661c4a5072ce4769dc47bc65f71
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 csyu.279 2023-02-13 18:51:50 UTC
Regression introduce by:

https://git.libreoffice.org/core/+/cf734427550f1a42f8ac669378719a1cad617bbb%5E%21

commit cf734427550f1a42f8ac669378719a1cad617bbb	[log]
author	Caolán McNamara <caolanm@redhat.com>	Wed Jan 18 21:19:26 2023
committer	Caolán McNamara <caolanm@redhat.com>	Wed Jan 18 23:24:31 2023 
tree fbf53b687551af60dc5e082f65f6489d4972ed9a
parent 6bf8ffbf90e701073a65e88ce4de26e40a24a07a [diff]

Bibisected with: bibisect-win64-7.6

Adding Cc: to Caolán McNamara
Comment 4 Commit Notification 2023-02-14 08:36:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c4de5f1f40f7392306daaae8c05481ea346bbeb0

tdf#153332 reset background to default if new preview has no bg

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2023-02-14 08:37:52 UTC
looks good to me in trunk now, backport to 7-5 in gerrit
Comment 6 Commit Notification 2023-02-14 09:58:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e21416088d73fb805a0bfdbdbeee7e4081d2c300

tdf#153332 reset background to default if new preview has no bg

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.