tdf#153332 reset background to default if new preview has no bg

but the old did

Change-Id: I59ebd4d5974c5d67c4ac572b091febed879fc290
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146948
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>